--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,6 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.jme3-jogg.classpath}:\
-    ${libs.jme3-test-data.classpath}:\
     ${libs.jme3-networking.classpath}:\
     ${libs.jme3-plugins.classpath}:\
     ${libs.jme3-core.classpath}:\
@@ -44,7 +43,8 @@ javac.classpath=\
     ${libs.jme3-effects.classpath}:\
     ${libs.jme3-terrain.classpath}:\
     ${libs.jme3-bullet.classpath}:\
-    ${libs.jme3-bullet-native.classpath}
+    ${libs.jme3-bullet-native.classpath}:\
+    ${libs.jme3-test-data.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,7 +74,7 @@ jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=mygame.Main
+main.class=jme3test.helloworld.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
